# nsql

./: .envrc  .gitignore  Cargo.toml  README.md  diff-against-duckdb.sh
nsql/: Cargo.toml
nsql-bind/: Cargo.toml
nsql-bind/src/: function.rs  join.rs  lib.rs  scope.rs  select.rs
nsql-btree/: Cargo.toml
nsql-btree/benches/: benches.rs
nsql-btree/proptest-regressions/mem/: tests.txt
nsql-btree/src/: btree.rs  lib.rs  mem.rs  node.rs  page.rs  rkyv.rs  tests.rs
nsql-btree/src/mem/: tests.rs
nsql-btree/src/page/: entry.rs  interior.rs  key_value_pair.rs  leaf.rs  node.rs  slotted.rs
nsql-btree/tests/nsql-btree/: concurrent.rs  find_min.rs  insert.rs  main.rs  remove.rs
nsql-btree/tests/proptest-regressions/: concurrent.txt  insert.txt  main.txt  remove.txt
nsql-buffer/: Cargo.toml
nsql-buffer/src/: cache.rs  lib.rs
nsql-buffer/src/cache/: tests.rs
nsql-buffer/tests/nsql-buffer/: main.rs
nsql-catalog/: Cargo.toml
nsql-catalog/src/: bootstrap.rs  entity.rs  entry.rs  expr.rs  lib.rs  namespace.rs  schema.rs  set.rs  system_table.rs  table.rs  ty.rs
nsql-catalog/src/bootstrap/: function.rs  namespace.rs  operator.rs  table.rs
nsql-catalog/src/entity/: column.rs  function.rs  index.rs  namespace.rs  operator.rs  sequence.rs  table.rs  ty.rs
nsql-catalog/src/entity/function/: builtins.rs
nsql-catalog/src/entity/function/builtins/: aggregates.rs
nsql-catalog/src/entity/table/: column.rs  storage.rs
nsql-catalog/src/entity/table/storage/: tests.rs
nsql-checkpoint/: Cargo.toml
nsql-checkpoint/src/: lib.rs
nsql-core/: Cargo.toml
nsql-core/src/: lib.rs  oid.rs  schema.rs  ty.rs  value.rs
nsql-core/src/ty/: fold.rs  zip.rs
nsql-execution/: Cargo.toml
nsql-execution/src/: analyze.rs  arena.rs  compile.rs  config.rs  eval.rs  executor.rs  expr.rs  jit.rs  lib.rs  physical_plan.rs  pipeline.rs  profiler.rs  vis.rs
nsql-execution/src/jit/: tests.rs
nsql-execution/src/physical_plan/: explain.rs  physical_copy_to.rs  physical_create_namespace.rs  physical_create_table.rs  physical_cross_product.rs  physical_cte.rs  physical_cte_scan.rs  physical_drop.rs  physical_dummy_scan.rs  physical_explain.rs  physical_filter.rs  physical_hash_distinct.rs  physical_insert.rs  physical_limit.rs  physical_order.rs  physical_projection.rs  physical_selection.rs  physical_set.rs  physical_show.rs  physical_table_scan.rs  physical_transaction.rs  physical_union.rs  physical_unnest.rs  physical_update.rs  physical_values.rs
nsql-execution/src/physical_plan/aggregate/: mod.rs  physical_hash_aggregate.rs  physical_ungrouped_aggregate.rs
nsql-execution/src/physical_plan/join/: mod.rs  physical_hash_join.rs  physical_nested_loop_join.rs
nsql-fs/: Cargo.toml
nsql-fs/src/: lib.rs
nsql-fs/tests/nsql-storage/: main.rs
nsql-ir/: Cargo.toml
nsql-ir/src/: expr.rs  fold.rs  lib.rs  validate.rs  visit.rs
nsql-ir/src/expr/: const_eval.rs  eval.rs
nsql-opt/: Cargo.toml
nsql-opt/src/: decorrelate.rs  lib.rs  node.rs  rules.rs  view.rs
nsql-opt/src/decorrelate/: rewrite_correlated_exprs.rs
nsql-pager/: Cargo.toml
nsql-pager/proptest-regressions/meta_page/: tests.txt
nsql-pager/src/: file.rs  lib.rs  mem.rs  meta_page.rs  meta_page_reader.rs  page.rs  single_file.rs  storage.rs
nsql-pager/src/file/: tests.rs
nsql-pager/src/mem/: tests.rs
nsql-pager/src/meta_page/: reader.rs  tests.rs  writer.rs
nsql-pager/src/single_file/: tests.rs
nsql-pager/tests/nsql-pager/: main.rs
nsql-serde/: Cargo.toml
nsql-serde/src/: lib.rs
nsql-shell/: Cargo.toml
nsql-shell/src/: main.rs
nsql-storage/: Cargo.toml
nsql-storage/proptest-regressions/table_storage/fsm/: tests.txt
nsql-storage/src/: checkpoint.rs  eval.rs  expr.rs  index.rs  lib.rs  schema.rs  table_storage.rs  transaction.rs  tuple.rs  value.rs  wal.rs
nsql-storage/src/eval/: fold.rs
nsql-storage/src/expr/: fold.rs  tests.rs
nsql-storage/src/table_storage/: fsm.rs  heap.rs  local_storage.rs  tests.rs
nsql-storage/src/table_storage/fsm/: fsm_page.rs  fsm_page_tests.rs  tests.rs
nsql-storage/src/table_storage/heap/: tests.rs  view.rs
nsql-storage/src/transaction/: tests.rs
nsql-storage/tests/it/: main.rs
nsql-storage/tests/nsql-storage/: main.rs
nsql-transaction/: Cargo.toml
nsql-transaction/src/: lib.rs
nsql-transaction/tests/nsql-transaction/: main.rs
nsql/benches/: nsql.rs
nsql/nsql-ir/: Cargo.toml
nsql/src/: lib.rs
nsql/tests/nsql/: main.rs
nsql/tests/nsql-sqllogictest/: main.rs
nsql/tests/nsql-sqllogictest/sqllogictest/: scratch.slt
nsql/tests/nsql-sqllogictest/sqllogictest/aggregate/: count.slt  first.slt  having.slt  max.slt  min.slt  order.slt  simple.slt  subquery.slt
nsql/tests/nsql-sqllogictest/sqllogictest/alias/: alias.slt  table-alias.slt
nsql/tests/nsql-sqllogictest/sqllogictest/bind/: ambiguous.slt  select-star-exclude.slt
nsql/tests/nsql-sqllogictest/sqllogictest/copy/: csv.slt
nsql/tests/nsql-sqllogictest/sqllogictest/create/: create-duplicate-schema.slt  create-duplicate-table.slt  create-schema.slt  create-sequence.slt  create-table.slt  duplicate-table-columns.slt
nsql/tests/nsql-sqllogictest/sqllogictest/cte/: cte.slt
nsql/tests/nsql-sqllogictest/sqllogictest/distinct/: distinct.slt
nsql/tests/nsql-sqllogictest/sqllogictest/drop/: drop-table.slt
nsql/tests/nsql-sqllogictest/sqllogictest/expr/: arith.slt  array.slt  case.slt  cast.slt  coalesce.slt  comparison.slt  exists-correlated.slt  exists.slt  expr.slt  in-scalar.slt  logical.slt  subquery-correlated.slt  subquery.slt
nsql/tests/nsql-sqllogictest/sqllogictest/filter/: filter.slt
nsql/tests/nsql-sqllogictest/sqllogictest/functions/: abs.slt  call.slt  polymorphic.slt  range.slt
nsql/tests/nsql-sqllogictest/sqllogictest/insert/: generated-identity.slt  insert-multiple-columns.slt  insert-respects-columns.slt  insert-returning.slt  (+2 more)
nsql/tests/nsql-test/: README.md  explain.rs  explain_analyze.rs  main.rs  opt.rs  scratch.sql
nsql/tests/nsql-test/opt/: aggregate_deduplication.rs  identity_projection_removal.rs
nsql/tests/nsql-test/sqltest/: scratch.sql
(+137 files in other folders)
