[workspace]
resolver = "2"
members = [
    "nsql",
    "nsql-arena",
    "nsql-bind",
    "nsql-catalog",
    "nsql-core",
    "nsql-derive",
    "nsql-execution",
    "nsql-ir",
    "nsql-parse",
    "nsql-opt",
    "nsql-rkyv",
    "nsql-shell",
    "nsql-storage",
    "nsql-storage-engine",
    "nsql-util",
    "nsql-lmdb",
    "nsql-redb",
]

[profile.bench]
debug = true
lto = "thin"

[profile.release]
debug = true
lto = "thin"
