# cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
    "nsql",
    "nsql-arena",
    "nsql-bind",
    "nsql-catalog",
    "nsql-core",
    "nsql-derive",
    "nsql-execution",
    "nsql-ir",
    "nsql-parse",
    "nsql-opt",
    "nsql-rkyv",
    "nsql-shell",
    "nsql-storage",
    "nsql-storage-engine",
    "nsql-util",
    "nsql-redb",
]

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
bool_comparison = "warn"
clone_on_ref_ptr = "warn"
no_effect = "warn"
unnecessary_unwrap = "warn"
dbg_macro = "warn"
zero_prefixed_literal = "warn"
borrowed_box = "warn"
deref_addrof = "warn"
double_must_use = "warn"
double_parens = "warn"
extra_unused_lifetimes = "warn"
needless_borrow = "warn"
needless_question_mark = "warn"
needless_return = "warn"
redundant_pattern = "warn"
redundant_slicing = "warn"
redundant_static_lifetimes = "warn"
single_component_path_imports = "warn"
unnecessary_cast = "warn"
useless_asref = "warn"
useless_conversion = "warn"
builtin_type_shadow = "warn"
duplicate_underscore_argument = "warn"
double_neg = "warn"
unnecessary_mut_passed = "warn"
wildcard_in_or_patterns = "warn"
crosspointer_transmute = "warn"
excessive_precision = "warn"
overflow_check_conditional = "warn"
match_overlapping_arm = "warn"
zero_divided_by_zero = "warn"
must_use_unit = "warn"
suspicious_assignment_formatting = "warn"
suspicious_else_formatting = "warn"
suspicious_unary_op_formatting = "warn"
mut_mutex_lock = "warn"
print_literal = "warn"
same_item_push = "warn"
useless_format = "warn"
write_literal = "warn"
redundant_closure = "warn"
redundant_closure_call = "warn"
unnecessary_lazy_evaluations = "warn"
partialeq_ne_impl = "warn"
redundant_field_names = "warn"
transmutes_expressible_as_ptr_casts = "warn"
from_over_into = "warn"


[profile.dev]
# codegen-backend = "cranelift"

[profile.bench]
debug = true
# lto = "thin"
