[package]
name = "nsql-bind"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql-catalog = { version = "0.1.0", path = "../nsql-catalog" }
nsql-core = { version = "0.1.0", path = "../nsql-core" }
ir = { version = "0.1.0", path = "../nsql-ir", package = "nsql-ir" }
nsql-parse = { version = "0.1.0", path = "../nsql-parse" }
nsql-transaction = { version = "0.1.0", path = "../nsql-transaction" }
rpds = "0.13.0"
tracing = "0.1.37"
anyhow = "1.0.71"
