[package]
name = "nsql-bind"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
ir = { path = "../nsql-ir", package = "nsql-ir" }
nsql-parse = { path = "../nsql-parse" }
rpds = "0.13.0"
tracing = "0.1.37"
anyhow = "1.0.71"
itertools = "0.10.5"
nsql-storage = { path = "../nsql-storage" }
