[package]
name = "nsql-bind"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
ir = { path = "../nsql-ir", package = "nsql-ir" }
nsql-parse = { path = "../nsql-parse" }
rpds = "1"
tracing = "0.1.37"
anyhow = "1.0.71"
indexmap = "2"
itertools = "0.11"
nsql-storage = { path = "../nsql-storage" }
nsql-storage-engine = { path = "../nsql-storage-engine" }
