[package]
name = "nsql-btree"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies]
async-recursion = "1.0.2"
bitflags = "2"
nsql-arena = { version = "0.1.0", path = "../nsql-arena" }
nsql-buffer = {  path = "../nsql-buffer" }
nsql-pager = { path = "../nsql-pager" }
nsql-rkyv = { version = "0.1.0", path = "../nsql-rkyv" }
nsql-serde = { version = "0.1.0", path = "../nsql-serde" }
nsql-util = { version = "0.1.0", path = "../nsql-util" }
rkyv = { version = "0.7.40", default-features = false }
test-strategy = "0.3.0"

[dev-dependencies]
nsql-test = { version = "0.1.0", path = "../nsql-test" }
criterion = { version = "0.4.0", features = ["async_tokio"] }
tokio-uring = "0.4.0"
