[package]
name = "nsql-btree"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies]
async-recursion = "1.0.2"
bitflags = "2"
bytes = "1.4.0"
cov-mark = "2.0.0-pre.1"
nsql-arena = { version = "0.1.0", path = "../nsql-arena" }
nsql-buffer = {  path = "../nsql-buffer" }
nsql-pager = { path = "../nsql-pager" }
nsql-rkyv = { version = "0.1.0", path = "../nsql-rkyv" }
nsql-util = { version = "0.1.0", path = "../nsql-util" }
rkyv = { version = "0.7.40", default-features = false, features = ["archive_be", "size_16"] }
test-strategy = "0.3.0"
tracing = "0.1.37"

[dev-dependencies]
nsql-test = { version = "0.1.0", path = "../nsql-test" }
criterion = { version = "0.4.0", features = ["async_tokio"] }
tokio-uring = "0.4.0"
proptest = "1.1.0"
test-strategy = "0.3.0"
tokio = { version = "1.26.0", default-features = false, features = ["rt"] }
