[package]
name = "nsql-buffer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
coarsetime = "0.1.22"
crossbeam = { version = "0.8.2", default-features = false, features = ["crossbeam-channel", "std"] }
parking_lot = "0.12.1"
rustc-hash = "1.1.0"

[dependencies.nsql-pager]
path = "../nsql-pager"

[dependencies.lruk]
path = "../lruk"

[dev-dependencies]
nsql-test = { path = "../nsql-test" }
