[package]
name = "nsql-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
fix-hidden-lifetime-bug = "0.2.5"
indexmap = "1.9.3"
nsql-core = { path = "../nsql-core" }
nsql-derive = { version = "0.1.0", path = "../nsql-derive" }
nsql-storage = { path = "../nsql-storage" }
nsql-storage-engine = { path = "../nsql-storage-engine" }
nsql-util = { path = "../nsql-util" }
parking_lot = "0.12.1"
rkyv = { version = "0.7.42", default-features = false }
tracing = "0.1.37"
