[package]
name = "nsql-checkpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.3.1"
nsql-catalog = { path = "../nsql-catalog" }
nsql-pager = { path = "../nsql-pager" }
nsql-serde = { path = "../nsql-serde" }
nsql-transaction = { path = "../nsql-transaction" }
thiserror = "1.0.38"
