[package]
name = "nsql-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql-serde = { version = "0.1.0", path = "../nsql-serde" }
smol_str = { version = "0.1.24", default-features = false }
rust_decimal = { version = "1.28.1", default-features = false, features = ["rkyv"] }
rkyv = { version = "0.7.40", default-features = false, features = ["archive_be", "size_32"] }
