[package]
name = "nsql-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.71"
smol_str = { version = "0.2", default-features = false }
rkyv = { version = "0.7.40", default-features = false, features = [
    "archive_be",
    "size_32",
] }
itertools = "0.11.0"
nsql-util = { path = "../nsql-util" }
