[package]
name = "nsql-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.64"
nsql-arena = { path = "../nsql-arena" }
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
ir = { path = "../nsql-ir", package = "nsql-ir" }
nsql-plan = { path = "../nsql-plan" }
nsql-storage = { path = "../nsql-storage" }
parking_lot = "0.12.1"
futures-util = "0.3.28"
tokio = { version = "1.27.0", default-features = false, features = ["sync"] }
dot-structures = "0.1.0"
smallvec = "1.10.0"
anyhow = "1.0.71"
atomic-take = "1.1.0"
tracing = "0.1.37"
itertools = "0.10.5"
nsql-storage-engine = { version = "0.1.0", path = "../nsql-storage-engine" }
