[package]
name = "nsql-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql-arena = { path = "../nsql-arena" }
opt = { path = "../nsql-opt", package = "nsql-opt" }
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
ir = { path = "../nsql-ir", package = "nsql-ir" }
nsql-storage = { path = "../nsql-storage" }
nsql-storage-engine = {  path = "../nsql-storage-engine" }
nsql-util = {  path = "../nsql-util" }
parking_lot = "0.12.1"
dot-structures = "0.1.0"
anyhow = "1.0.71"
atomic-take = "1.1.0"
tracing = "0.1.37"
itertools = "0.11"
rayon = "1.7.0"
dashmap = { version = "5.4.0", features = ["raw-api", "rayon"] }
csv = "1.3.0"
rustc-hash = "1.1.0"
