[package]
name = "nsql-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2.139", default-features = false }
nsql-error = { version = "0.1.0", path = "../nsql-error" }
tokio-uring = { branch = "master", git = "https://github.com/tokio-rs/tokio-uring" }

[dev-dependencies]
nsql-test = { path = "../nsql-test" }
proptest = "1.1.0"
test-strategy = "0.3.0"
