[package]
name = "nsql-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.3.1"
libc = { version = "0.2.139", default-features = false }

tokio-uring = { branch = "master", git = "https://github.com/tokio-rs/tokio-uring" }

[dev-dependencies]
nsql-test = { path = "../nsql-test" }
proptest = "1.1.0"
test-strategy = "0.3.0"
