[package]
name = "nsql-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql-catalog = { version = "0.1.0", path = "../nsql-catalog" }
nsql-core = { version = "0.1.0", path = "../nsql-core" }
nsql-storage = { version = "0.1.0", path = "../nsql-storage" }
rust_decimal = { version = "1.28.1", default-features = false }
