[package]
name = "nsql-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
nsql-storage = { path = "../nsql-storage" }
nsql-storage-engine = { version = "0.1.0", path = "../nsql-storage-engine" }
