[package]
name = "nsql-ir"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1"
itertools = "0.11.0"
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
nsql-storage = { path = "../nsql-storage" }
nsql-util = { path = "../nsql-util" }
nsql-storage-engine = { version = "0.1.0", path = "../nsql-storage-engine" }
