[package]
name = "nsql-opt"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
egg = "0.9.5"
ir = { path = "../nsql-ir", package = "nsql-ir" }
nsql-storage = { path = "../nsql-storage" }
itertools = "0.11.0"
nsql-core = { path = "../nsql-core" }
rustc-hash = "1.1.0"
tracing = "0.1.37"
