[package]
name = "nsql-pager"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
bytes = "1.4.0"
crc = "3.0"
futures-executor = { version = "0.3.27", default-features = false }
parking_lot = { version = "0.12.1", features = ["send_guard"] }
nsql-serde = { path = "../nsql-serde" }
nsql-util = { path = "../nsql-util" }
pin-utils = "0.1.0"
tokio = { version = "1.25.0", default-features = false, features = [ "io-util" ] }
rkyv = { version = "0.7.40", default-features = false, features = ["archive_be", "validation", "size_16"] }

[dependencies.nsql-fs]
path = "../nsql-fs"

[dev-dependencies]
nsql-test = { path = "../nsql-test" }
proptest = "1.1.0"
test-strategy = "0.3.0"
