[package]
name = "nsql-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
nsql-error = { version = "0.1.0", path = "../nsql-error" }
tokio = { version = "1.25.0", default-features = false }
