[package]
name = "nsql-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
nsql = { path = "../nsql" }
nu-ansi-term = "0.47.0"
reedline = "0.19.0"
tabled = { version = "0.12.0", default-features = false, features = ["std"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
