[package]
name = "nsql-shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nsql"
path = "src/main.rs"

[dependencies]
argh = "0.1.10"
nsql = { path = "../nsql" }
nu-ansi-term = "0.49.0"
reedline = "0.22.0"
tabled = { version = "0.13.0", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.4"
