[package]
name = "nsql-storage"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
rust_decimal = { version = "1.28.1", default-features = false, features = [
    "rkyv",
    "c-repr",
] }
nsql-arena = { path = "../nsql-arena" }
nsql-core = { path = "../nsql-core" }
nsql-rkyv = { path = "../nsql-rkyv" }
nsql-util = { path = "../nsql-util" }
rkyv = { version = "0.7.40", default-features = false, features = [
    "archive_be",
    "size_32",
] }
tracing = "0.1.37"
anyhow = "1.0.71"
parking_lot = "0.12.1"
itertools = "0.11"
nsql-storage-engine = { path = "../nsql-storage-engine" }
next-gen = "0.1.1"
fix-hidden-lifetime-bug = "0.2.5"
atomic-take = "1.1.0"

[dev-dependencies]
proptest = "1.1.0"
test-strategy = "0.3.0"
