[package]
name = "nsql-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = { version = "0.5.1", default-features = false }
crossbeam-skiplist = "0.1.1"
itertools = "0.10.5"
nsql-util = { version = "0.1.0", path = "../nsql-util" }
rkyv = { version = "0.7.41", default-features = false }
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
nsql-test = { path = "../nsql-test" }
tokio = { version = "1.27.0", default-features = false, features = ["rt-multi-thread"] }
