[package]
name = "nsql"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.6.0"
error-stack = "0.3.1"
nsql-bind = { path = "../nsql-bind" }
nsql-buffer = { path = "../nsql-buffer" }
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
nsql-execution = { path = "../nsql-execution" }
nsql-opt = { path = "../nsql-opt" }

nsql-pager = { path = "../nsql-pager" }
nsql-parse = { path = "../nsql-parse" }
nsql-plan = { path = "../nsql-plan" }
nsql-storage = { path = "../nsql-storage" }
nsql-transaction = { path = "../nsql-transaction" }
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["time"] }
sqllogictest = { path = "../vendor/sqllogictest/sqllogictest" }
async-trait = "0.1.64"
nsql-test = { path = "../nsql-test" }
datatest-stable = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
expect-test = "1.4.1"

[[test]]
name = "nsql-sqllogictest"
harness = false

[[test]]
name = "nsql-test"
