[package]
name = "nsql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
arc-swap = "1.6.0"
error-stack = "0.3.1"
nsql-bind = { path = "../nsql-bind" }
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
nsql-execution = { path = "../nsql-execution" }
nsql-lmdb = { version = "0.1.0", path = "../nsql-lmdb" }
nsql-opt = { path = "../nsql-opt" }

nsql-parse = { path = "../nsql-parse" }
nsql-plan = { path = "../nsql-plan" }
nsql-storage = { path = "../nsql-storage" }
nsql-storage-engine = { path = "../nsql-storage-engine" }
nsql-echodb = { path = "../nsql-echodb", optional = true }
tracing = "0.1.37"
nsql-util = { version = "0.1.0", path = "../nsql-util" }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["time"] }
sqllogictest = { path = "../vendor/sqllogictest/sqllogictest" }
async-trait = "0.1.64"
nsql-test = { path = "../nsql-test" }
datatest-stable = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
expect-test = "1.4.1"
thiserror = "1.0.40"
tempfile = "3.5.0"

[[test]]
name = "nsql-sqllogictest"
harness = false

[[test]]
name = "nsql-test"

[features]
default = ["in-memory"]
in-memory = ["nsql-echodb"]
