[package]
name = "nsql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
arc-swap = "1.6.0"
nsql-bind = { path = "../nsql-bind" }
nsql-catalog = { path = "../nsql-catalog" }
nsql-core = { path = "../nsql-core" }
nsql-execution = { path = "../nsql-execution" }
nsql-redb = {path = "../nsql-redb" }
nsql-lmdb = {path = "../nsql-lmdb" }
ir = {path = "../nsql-ir", package = "nsql-ir" }
nsql-opt = { path = "../nsql-opt" }
nsql-parse = { path = "../nsql-parse" }
nsql-storage = { path = "../nsql-storage" }
nsql-storage-engine = { path = "../nsql-storage-engine" }
tracing = "0.1.37"
nsql-util = { path = "../nsql-util" }
mimalloc = { version = "*", default-features = false }
tracing-tree = "0.2.4"

[dev-dependencies]
nsql-test = { path = "../nsql-test" }
datatest-stable = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
expect-test = "1.4.1"
thiserror = "1.0.40"
criterion = "0.5.1"
criterion-macro = "0.4"
sqllogictest = { git = "https://github.com/andyyu2004/sqllogictest-rs", branch = "main" }
async-trait = "0.1"

[[test]]
name = "nsql-sqllogictest"
harness = false

[[test]]
name = "nsql-test"

[[bench]]
name = "nsql"
